# _FastapiTestsPT

./: .env.example  Dockerfile  README.md  bank.db  openaiTest.py  plan.txt  pyproject.toml  pytest.ini  run_client.py  run_db.py  run_server.py  test.db
client/: __init__.py  package-lock.json  package.json
client/db/: __init__.py
client/routers/: __init__.py  account.py  auth.py  card.py  deafult.py
client/schemas/: __init__.py  account.py  auth.py  card.py
client/src/: App.vue
client/src/components/: Header.vue  Test.vue  Users.vue
client/src/router/: index.js
client/templates/: __base.html  __helpers.html  create_account.html  create_card.html  dashboard.html  detail_account.html  login.html  logout.html  register.html
client/utils/: __init__.py  auth_client.py
server/: __init__.py
server/db/: __init__.py  config.py
server/db/models/: __init__.py
server/db/models/main/: __init__.py  account.py  card.py  transaction.py  user.py
server/routers/: __init__.py  account.py  account_transaction.py  auth.py  card.py  transaction.py  user.py
server/schemas/: __init__.py  account.py  card.py  transactions.py  user.py
server/tests/: conftest.py  success_test.py
server/utils/: __init__.py  security.py
